--- a/public/locales/en/translations.json
+++ b/public/locales/en/translations.json
@@ -10,6 +10,7 @@
     "invest": "Invest",
     "withdraw": "Withdraw",
     "create-program": "Create Program",
+    "create-tournament-account": "Create Tournament Account",
     "edit-program": "Edit Program",
     "close-program": "Close Program",
     "close-period": "Close Period"
