--- a/public/locales/en/translations.json
+++ b/public/locales/en/translations.json
@@ -201,5 +201,33 @@
     "how-much-withdraw": "How much would you like to withdraw?",
     "enter-amount": "Enter {{currency}} amount",
     "minimal-balance": "Minimal remaining balance is"
+  },
+  "programs-filtering": {
+    "level": {
+      "name": "Level",
+      "description": "Select Trader Level",
+      "value-pattern": "{{value.0}} - {{value.1}}"
+    },
+    "profitAvgPercent": {
+      "name": "Average Profit",
+      "description": "Select Average Profit",
+      "value-pattern": "{{value.0}}% - {{value.1}}%"
+    },
+    "profitTotal": {
+      "name": "Total Profit",
+      "description": "Select Total Profit",
+      "value-pattern": "{{value.0}}GVT - {{value.1}}GVT"
+    },
+    "balanceUSD": {
+      "name": "Balance",
+      "description": "Select Balance",
+      "value-pattern": "${{value.0}} - ${{value.1}}"
+    },
+    "hasAvailableInvestment": {
+      "name": "Available To Invest",
+      "description": "Show only the programs you can invest in",
+      "label": "Has Available Investment",
+      "value-pattern": ""
+    }
   }
 }
