GVW-45 add initial broker cards, broker-info structure, translation

--- a/public/locales/en/translations.json
+++ b/public/locales/en/translations.json
@@ -229,5 +229,15 @@
       "label": "Has Available Investment",
       "value-pattern": ""
     }
+  },
+  "create-program-page": {
+    "title": "Create Program",
+    "broker-info": {
+      "about": "About",
+      "terms": "Terms",
+      "leverage": "Leverage",
+      "fee": "Fee",
+      "assets": "Assets"
+    }
   }
 }
