--- a/public/locales/en/translations.json
+++ b/public/locales/en/translations.json
@@ -230,6 +230,10 @@
       "value-pattern": ""
     }
   },
+  "buttons": {
+    "continue": "Continue",
+    "back": "Back"
+  },
   "create-program-page": {
     "title": "Create Program",
     "broker-info": {
