--- a/public/locales/en/translations.json
+++ b/public/locales/en/translations.json
@@ -461,8 +461,76 @@
       "Your wallet-pane number was copied to the clipboard successfully.",
     "copy-to-clipboard-error": "Failed to copy data to the clipboard."
   },
+  "wallet": {
+    "title": "Wallet",
+    "total-balance": "Total balance",
+    "invested-value": "Invested value",
+    "available": "Available",
+    "add-funds": "Add funds",
+    "withdraw": "Withdraw",
+    "transactions": {
+      "date": "Date",
+      "type": "Type",
+      "amount": "Amount"
+    },
+    "transactions-types": {
+      "wallet": "Wallet",
+      "program": "Program",
+      "fund": "Fund",
+      "program-request": "Program request",
+      "withdrawal-request": "Withdrawal request",
+      "payment-transaction": "Payment transaction"
+    }
+  },
+  "wallet-withdraw": {
+    "title": "Withdraw",
+    "available": "Available in wallet",
+    "select-currency": "Select a wallet currency",
+    "amount": "Enter correct amount",
+    "will-get": "You'll get",
+    "address": "Withdraw address",
+    "fee": "Fee",
+    "withdrawing": "Withdrawing",
+    "info":
+      "Amount of withdrawals can be changed depending on the exchange rate.",
+    "withdraw-request":
+      "Please approve the withdrawal request via the link in the confirmation email.",
+    "two-factor-code-label": "Two factor code",
+    "confirmation": {
+      "page-title": "Wallet withdraw confirm",
+      "error": "An error occurred during confirmation of email: ",
+      "success": "Successful Email Verification"
+    },
+    "validation": {
+      "amount-more-than-available":
+        "Amount is more than available in your wallet",
+      "amount-is-required": "Amount is required",
+      "address-is-required": "Address is required.",
+      "two-factor-6digits": "Authentication code should contain 6 digits.",
+      "two-factor-required": "Authentication code is required."
+    }
+  },
   "not-found-page": {
     "title": "Page Not Found",
     "body": "Page Not Found"
+  },
+  "filters": {
+    "level": {
+      "label": "Level"
+    },
+    "currency": {
+      "label": "Currency"
+    },
+    "date-range": {
+      "label": "Date range",
+      "all-time": "All time",
+      "last-month": "Last month",
+      "last-week": "Last week",
+      "custom": "Custom",
+      "program-start": "Program start",
+      "start": "Start",
+      "end": "End",
+      "today": "Today"
+    }
   }
 }
