GVW-68 transfer the table from investor to manager

--- a/public/locales/en/translations.json
+++ b/public/locales/en/translations.json
@@ -532,5 +532,10 @@
       "end": "End",
       "today": "Today"
     }
+  },
+  "notifications-aside": {
+    "header": "Notifications",
+    "today": "today",
+    "yesterday": "yesterday"
   }
 }
