--- a/public/locales/en/translations.json
+++ b/public/locales/en/translations.json
@@ -373,9 +373,45 @@
       }
     }
   },
+  "password-page": {
+    "title": "Change password"
+  },
+  "password-change": {
+    "current-password": "Current password",
+    "password": "Password",
+    "confirm-password": "Confirm password",
+    "success-alert": "Password was changed"
+  },
   "profile": {
     "title": "Profile",
+    "contacts": "Contacts",
+    "not-verified": "Not verified",
+    "phone-number": "Phone number",
+    "email": "Email address",
+    "personal-info": "Personal info",
+    "forename": "Forename",
+    "family-name": "Family name",
+    "birthday": "Date of birth",
+    "citizen": "Citizenship",
+    "residential-address": "Residential address",
+    "country": "Country",
+    "city": "City",
+    "address": "Address",
+    "index": "Index",
+    "success-edit": "Profile update is successful",
+    "success-verify": "Phone number verification is successful",
+    "verification": {
+      "phone": {
+        "required": "Code is required",
+        "title": "Verify phone number",
+        "description": "We have sent you a verification code",
+        "number": "Phone number",
+        "code": "Verification code",
+        "resend": "Resend code"
+      }
+    },
     "settings": {
+      "change-password": "Change password",
       "title": "Settings",
       "profile-image": "Profile image",
       "image-requirements": "At least 300 x 300px PNG or JPG file.",
