GVW-26 Profile: View personal detail / notifications

--- a/public/locales/en/translations.json
+++ b/public/locales/en/translations.json
@@ -584,5 +584,100 @@
     "header": "Notifications",
     "today": "today",
     "yesterday": "yesterday"
+  },
+  "notifications": {
+    "title": "Notification settings",
+    "general": {
+      "title": "GENERAL",
+      "news-updates": "News and updates",
+      "emergency": "Emergency notifications",
+      "PlatformEmergency": {
+        "enabled-alert": "Enabled emergency notifications",
+        "disabled-alert": "Disabled emergency notifications"
+      },
+      "PlatformNewsAndUpdates": {
+        "enabled-alert": "Enabled news and updates notifications",
+        "disabled-alert": "Disabled news and updates notifications"
+      }
+    },
+    "programs": "PROGRAMS",
+    "program": {
+      "title": "Program notifications",
+      "general": {
+        "title": "GENERAL",
+        "news-updates": "Program news and updates",
+        "end-of-period": "Notifications for the end of the period",
+        "ProgramNewsAndUpdates": {
+          "enabled-alert": "Enabled program news and updates notifications",
+          "disabled-alert": "Disabled program news and updates notifications"
+        },
+        "ProgramEndOfPeriod": {
+          "enabled-alert": "Enabled the end of period notifications",
+          "disabled-alert": "Disabled the end of period notifications"
+        }
+      },
+      "custom": {
+        "title": "CUSTOM",
+        "profit": "Profit notification",
+        "create": "Create notification",
+        "enabled-alert": "Enabled custom notification",
+        "disabled-alert": "Disabled custom notification",
+        "delete-alert": "Custom notification was deleted",
+        "create-alert": "Custom notification was created"
+      },
+      "create": {
+        "title": "Create notification",
+        "type-label": "Type",
+        "amount-label": "Enter amount",
+        "amount-required": "Amount is required",
+        "Level": {
+          "title": "Level notification",
+          "label": "Level"
+        },
+        "Profit": {
+          "title": "Profit notification",
+          "label": "Profit"
+        }
+      }
+    },
+    "fund": {
+      "title": "Fund notifications",
+      "general": {
+        "title": "GENERAL",
+        "news-updates": "Fund news and updates",
+        "end-of-period": "Notifications for the end of the period",
+        "FundNewsAndUpdates": {
+          "disabled-alert": "Enabled fund news and updates notifications",
+          "enabled-alert": "Disabled fund news and updates notifications"
+        },
+        "FundEndOfPeriod": {
+          "disabled-alert": "Enabled the end of period notifications",
+          "enabled-alert": "Disabled the end of period notifications"
+        }
+      },
+      "custom": {
+        "title": "CUSTOM",
+        "profit": "Profit notification",
+        "create": "Create notification",
+        "enabled-alert": "Enabled custom notification",
+        "disabled-alert": "Disabled custom notification",
+        "delete-alert": "Custom notification was deleted",
+        "create-alert": "Custom notification was created"
+      },
+      "create": {
+        "title": "Create notification",
+        "type-label": "Type",
+        "amount-label": "Enter amount",
+        "amount-required": "Amount is required",
+        "Level": {
+          "title": "Level notification",
+          "label": "Level"
+        },
+        "Profit": {
+          "title": "Profit notification",
+          "label": "Profit"
+        }
+      }
+    }
   }
 }
