--- a/public/locales/en/translations.json
+++ b/public/locales/en/translations.json
@@ -603,7 +603,7 @@
     "confirmation": {
       "page-title": "Wallet withdraw confirm",
       "error": "An error occurred during confirmation of email: ",
-      "success": "Successful Email Verification"
+      "success": "Withdrawal request is confirmed"
     },
     "validation": {
       "amount-more-than-available":
